// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map Editor renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    isActive={true}
    setBuildStructureDefinition={[Function]}
    structureDefinition={
        Object {
            "description": "<p>Sup</p>",
            "length": 2,
            "name": "a",
            "width": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        " ",
        <button
          className="structure-btn"
          onClick={[Function]}
>
          <Card
                    tag="div"
          >
                    <CardImg
                              alt="a"
                              src={undefined}
                              tag="img"
                              top={true}
                              width="100%"
                    />
                    <CardBody
                              tag="div"
                    >
                              <CardTitle
                                        tag="h4"
                              >
                                        a
                              </CardTitle>
                              <CardSubtitle
                                        tag="h6"
                              >
                                        1
                                         x 
                                        2
                              </CardSubtitle>
                              <div
                                        className="card-text"
                                        dangerouslySetInnerHTML={
                                                  Object {
                                                            "__html": "<p>Sup</p>",
                                                          }
                                        }
                              />
                    </CardBody>
          </Card>
</button>,
      ],
      "className": "card-li active",
    },
    "ref": null,
    "rendered": Array [
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Card
            tag="div"
>
            <CardImg
                        alt="a"
                        src={undefined}
                        tag="img"
                        top={true}
                        width="100%"
            />
            <CardBody
                        tag="div"
            >
                        <CardTitle
                                    tag="h4"
                        >
                                    a
                        </CardTitle>
                        <CardSubtitle
                                    tag="h6"
                        >
                                    1
                                     x 
                                    2
                        </CardSubtitle>
                        <div
                                    className="card-text"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "<p>Sup</p>",
                                                          }
                                    }
                        />
            </CardBody>
</Card>,
          "className": "structure-btn",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <CardImg
                alt="a"
                src={undefined}
                tag="img"
                top={true}
                width="100%"
/>,
              <CardBody
                tag="div"
>
                <CardTitle
                                tag="h4"
                >
                                a
                </CardTitle>
                <CardSubtitle
                                tag="h6"
                >
                                1
                                 x 
                                2
                </CardSubtitle>
                <div
                                className="card-text"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "<p>Sup</p>",
                                                              }
                                }
                />
</CardBody>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "a",
                "src": undefined,
                "tag": "img",
                "top": true,
                "width": "100%",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <CardTitle
                    tag="h4"
>
                    a
</CardTitle>,
                  <CardSubtitle
                    tag="h6"
>
                    1
                     x 
                    2
</CardSubtitle>,
                  <div
                    className="card-text"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "<p>Sup</p>",
                                                          }
                    }
/>,
                ],
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "a",
                    "tag": "h4",
                  },
                  "ref": null,
                  "rendered": "a",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      1,
                      " x ",
                      2,
                    ],
                    "tag": "h6",
                  },
                  "ref": null,
                  "rendered": Array [
                    1,
                    " x ",
                    2,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "card-text",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "<p>Sup</p>",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "button",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          " ",
          <button
            className="structure-btn"
            onClick={[Function]}
>
            <Card
                        tag="div"
            >
                        <CardImg
                                    alt="a"
                                    src={undefined}
                                    tag="img"
                                    top={true}
                                    width="100%"
                        />
                        <CardBody
                                    tag="div"
                        >
                                    <CardTitle
                                                tag="h4"
                                    >
                                                a
                                    </CardTitle>
                                    <CardSubtitle
                                                tag="h6"
                                    >
                                                1
                                                 x 
                                                2
                                    </CardSubtitle>
                                    <div
                                                className="card-text"
                                                dangerouslySetInnerHTML={
                                                            Object {
                                                                        "__html": "<p>Sup</p>",
                                                                      }
                                                }
                                    />
                        </CardBody>
            </Card>
</button>,
        ],
        "className": "card-li active",
      },
      "ref": null,
      "rendered": Array [
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Card
              tag="div"
>
              <CardImg
                            alt="a"
                            src={undefined}
                            tag="img"
                            top={true}
                            width="100%"
              />
              <CardBody
                            tag="div"
              >
                            <CardTitle
                                          tag="h4"
                            >
                                          a
                            </CardTitle>
                            <CardSubtitle
                                          tag="h6"
                            >
                                          1
                                           x 
                                          2
                            </CardSubtitle>
                            <div
                                          className="card-text"
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "<p>Sup</p>",
                                                                    }
                                          }
                            />
              </CardBody>
</Card>,
            "className": "structure-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <CardImg
                  alt="a"
                  src={undefined}
                  tag="img"
                  top={true}
                  width="100%"
/>,
                <CardBody
                  tag="div"
>
                  <CardTitle
                                    tag="h4"
                  >
                                    a
                  </CardTitle>
                  <CardSubtitle
                                    tag="h6"
                  >
                                    1
                                     x 
                                    2
                  </CardSubtitle>
                  <div
                                    className="card-text"
                                    dangerouslySetInnerHTML={
                                                      Object {
                                                                        "__html": "<p>Sup</p>",
                                                                      }
                                    }
                  />
</CardBody>,
              ],
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "a",
                  "src": undefined,
                  "tag": "img",
                  "top": true,
                  "width": "100%",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <CardTitle
                      tag="h4"
>
                      a
</CardTitle>,
                    <CardSubtitle
                      tag="h6"
>
                      1
                       x 
                      2
</CardSubtitle>,
                    <div
                      className="card-text"
                      dangerouslySetInnerHTML={
                                            Object {
                                                                  "__html": "<p>Sup</p>",
                                                                }
                      }
/>,
                  ],
                  "tag": "div",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "a",
                      "tag": "h4",
                    },
                    "ref": null,
                    "rendered": "a",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        1,
                        " x ",
                        2,
                      ],
                      "tag": "h6",
                    },
                    "ref": null,
                    "rendered": Array [
                      1,
                      " x ",
                      2,
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "card-text",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "<p>Sup</p>",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "button",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Map Editor renders an inactive structure definition 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    isActive={false}
    setBuildStructureDefinition={[Function]}
    structureDefinition={
        Object {
            "length": 2,
            "name": "a",
            "width": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        " ",
        <button
          className="structure-btn"
          onClick={[Function]}
>
          <Card
                    tag="div"
          >
                    <CardImg
                              alt="a"
                              src={undefined}
                              tag="img"
                              top={true}
                              width="100%"
                    />
                    <CardBody
                              tag="div"
                    >
                              <CardTitle
                                        tag="h4"
                              >
                                        a
                              </CardTitle>
                              <CardSubtitle
                                        tag="h6"
                              >
                                        1
                                         x 
                                        2
                              </CardSubtitle>
                              <div
                                        className="card-text"
                                        dangerouslySetInnerHTML={
                                                  Object {
                                                            "__html": "",
                                                          }
                                        }
                              />
                    </CardBody>
          </Card>
</button>,
      ],
      "className": "card-li null",
    },
    "ref": null,
    "rendered": Array [
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Card
            tag="div"
>
            <CardImg
                        alt="a"
                        src={undefined}
                        tag="img"
                        top={true}
                        width="100%"
            />
            <CardBody
                        tag="div"
            >
                        <CardTitle
                                    tag="h4"
                        >
                                    a
                        </CardTitle>
                        <CardSubtitle
                                    tag="h6"
                        >
                                    1
                                     x 
                                    2
                        </CardSubtitle>
                        <div
                                    className="card-text"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "",
                                                          }
                                    }
                        />
            </CardBody>
</Card>,
          "className": "structure-btn",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <CardImg
                alt="a"
                src={undefined}
                tag="img"
                top={true}
                width="100%"
/>,
              <CardBody
                tag="div"
>
                <CardTitle
                                tag="h4"
                >
                                a
                </CardTitle>
                <CardSubtitle
                                tag="h6"
                >
                                1
                                 x 
                                2
                </CardSubtitle>
                <div
                                className="card-text"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "",
                                                              }
                                }
                />
</CardBody>,
            ],
            "tag": "div",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "a",
                "src": undefined,
                "tag": "img",
                "top": true,
                "width": "100%",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <CardTitle
                    tag="h4"
>
                    a
</CardTitle>,
                  <CardSubtitle
                    tag="h6"
>
                    1
                     x 
                    2
</CardSubtitle>,
                  <div
                    className="card-text"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "",
                                                          }
                    }
/>,
                ],
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "a",
                    "tag": "h4",
                  },
                  "ref": null,
                  "rendered": "a",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      1,
                      " x ",
                      2,
                    ],
                    "tag": "h6",
                  },
                  "ref": null,
                  "rendered": Array [
                    1,
                    " x ",
                    2,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "card-text",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "button",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          " ",
          <button
            className="structure-btn"
            onClick={[Function]}
>
            <Card
                        tag="div"
            >
                        <CardImg
                                    alt="a"
                                    src={undefined}
                                    tag="img"
                                    top={true}
                                    width="100%"
                        />
                        <CardBody
                                    tag="div"
                        >
                                    <CardTitle
                                                tag="h4"
                                    >
                                                a
                                    </CardTitle>
                                    <CardSubtitle
                                                tag="h6"
                                    >
                                                1
                                                 x 
                                                2
                                    </CardSubtitle>
                                    <div
                                                className="card-text"
                                                dangerouslySetInnerHTML={
                                                            Object {
                                                                        "__html": "",
                                                                      }
                                                }
                                    />
                        </CardBody>
            </Card>
</button>,
        ],
        "className": "card-li null",
      },
      "ref": null,
      "rendered": Array [
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Card
              tag="div"
>
              <CardImg
                            alt="a"
                            src={undefined}
                            tag="img"
                            top={true}
                            width="100%"
              />
              <CardBody
                            tag="div"
              >
                            <CardTitle
                                          tag="h4"
                            >
                                          a
                            </CardTitle>
                            <CardSubtitle
                                          tag="h6"
                            >
                                          1
                                           x 
                                          2
                            </CardSubtitle>
                            <div
                                          className="card-text"
                                          dangerouslySetInnerHTML={
                                                        Object {
                                                                      "__html": "",
                                                                    }
                                          }
                            />
              </CardBody>
</Card>,
            "className": "structure-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <CardImg
                  alt="a"
                  src={undefined}
                  tag="img"
                  top={true}
                  width="100%"
/>,
                <CardBody
                  tag="div"
>
                  <CardTitle
                                    tag="h4"
                  >
                                    a
                  </CardTitle>
                  <CardSubtitle
                                    tag="h6"
                  >
                                    1
                                     x 
                                    2
                  </CardSubtitle>
                  <div
                                    className="card-text"
                                    dangerouslySetInnerHTML={
                                                      Object {
                                                                        "__html": "",
                                                                      }
                                    }
                  />
</CardBody>,
              ],
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "a",
                  "src": undefined,
                  "tag": "img",
                  "top": true,
                  "width": "100%",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <CardTitle
                      tag="h4"
>
                      a
</CardTitle>,
                    <CardSubtitle
                      tag="h6"
>
                      1
                       x 
                      2
</CardSubtitle>,
                    <div
                      className="card-text"
                      dangerouslySetInnerHTML={
                                            Object {
                                                                  "__html": "",
                                                                }
                      }
/>,
                  ],
                  "tag": "div",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "a",
                      "tag": "h4",
                    },
                    "ref": null,
                    "rendered": "a",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        1,
                        " x ",
                        2,
                      ],
                      "tag": "h6",
                    },
                    "ref": null,
                    "rendered": Array [
                      1,
                      " x ",
                      2,
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "card-text",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "button",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
